--- a/app/src/main/res/layout/popup.xml
+++ b/app/src/main/res/layout/popup.xml
@@ -13,7 +13,7 @@
         android:layout_gravity="center_horizontal"
         android:layout_weight="1"
         android:text="@string/newAccountPopup"
-        android:textSize="18sp"
+        android:textSize="24sp"
         android:textStyle="bold" />
 
     <EditText
@@ -22,7 +22,9 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginStart="5dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="5dp"
+        android:layout_marginBottom="20dp"
         android:layout_weight="1"
         android:hint="@string/prompt_accountName"
         android:inputType="textCapSentences" />
@@ -39,6 +41,9 @@
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_gravity="start"
+            android:layout_marginStart="5dp"
+            android:layout_marginBottom="5dp"
+            android:backgroundTint="#B10B0B"
             android:text="@string/backButton" />
 
         <Button
@@ -46,6 +51,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
+            android:layout_marginEnd="5dp"
+            android:layout_marginBottom="5dp"
+            android:backgroundTint="#4CAF50"
             android:text="@string/createButton" />
     </RelativeLayout>
 
