--- a/app/src/main/res/layout/activity_card.xml
+++ b/app/src/main/res/layout/activity_card.xml
@@ -149,6 +149,7 @@
         android:layout_width="382dp"
         android:layout_height="55dp"
         android:layout_marginTop="8dp"
+        android:onClick="removeCardOnClick"
         android:text="Remove Card"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
