--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -7,96 +7,180 @@
     android:layout_height="match_parent"
     tools:context=".HomeScreen">
 
-    <ScrollView
-        android:id="@+id/scrollView"
-        android:layout_width="0dp"
-        android:layout_height="530dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom="30dp"
-        android:fillViewport="false"
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginBottom="20dp"
+        android:orientation="vertical"
         app:layout_constraintBottom_toTopOf="@+id/homeBottomAppBar"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/greeting">
+        app:layout_constraintTop_toTopOf="parent">
 
-        <LinearLayout
-            android:id="@+id/linearLayout"
+        <TextView
+            android:id="@+id/greeting"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:background="@color/teal_700"
+            android:gravity="center"
+            android:textAlignment="center"
+            android:textSize="36sp"
+            android:textStyle="bold" />
+
+        <FrameLayout
+            android:id="@+id/yourAccountBar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
-            android:orientation="vertical">
+            android:layout_marginTop="20dp">
 
-            <androidx.cardview.widget.CardView
-                android:id="@+id/currentAccount"
+            <TextView
+                android:id="@+id/yourAccounts"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="start|center_vertical"
+                android:layout_marginStart="10dp"
+                android:text="@string/yourAccounts"
+                android:textSize="24sp"
+                android:textStyle="bold" />
+
+        </FrameLayout>
+
+        <View
+            android:id="@+id/yourAccountsDivider"
+            style="@style/Divider"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginTop="10dp"></View>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/currentAccount"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="10dp"
+            android:clipToPadding="true"
+            android:minHeight="60dp"
+            android:paddingTop="80dp"
+            android:paddingBottom="80dp"
+            app:cardBackgroundColor="@color/teal_700"
+            app:cardCornerRadius="50px"
+            app:cardElevation="20dp"
+            app:cardPreventCornerOverlap="true"
+            app:cardUseCompatPadding="false">
+
+            <TextView
+                android:id="@+id/currentAccountName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingLeft="10px"
+                android:paddingTop="10px"
+                android:text="Current Account"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/currentAccountNumber"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingLeft="10px"
+                android:paddingTop="70px"
+                android:text="00001111"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/currentAccountSortCode"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingLeft="10px"
+                android:paddingTop="130px"
+                android:paddingBottom="10px"
+                android:text="00-11-22"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/currentAccountBalance"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingLeft="700px"
+                android:paddingTop="70px"
+                android:paddingEnd="10px"
+                android:text="Balance"
+                android:textSize="16sp" />
+
+        </androidx.cardview.widget.CardView>
+
+        <View
+            android:id="@+id/currentAccountDivider"
+            style="@style/Divider"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginTop="20dp"></View>
+
+        <RelativeLayout
+            android:id="@+id/yourVaultsBar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp">
+
+            <TextView
+                android:id="@+id/vaultsText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignEnd="@id/newVaultButton"
+                android:layout_alignParentStart="true"
+                android:layout_centerVertical="true"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="20dp"
+                android:text="Vaults:"
+                android:textSize="24sp"
+                android:textStyle="bold" />
+
+            <Button
+                android:id="@+id/newVaultButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:layout_marginEnd="10dp"
+                android:backgroundTint="@color/teal_200"
+                android:onClick="newAccountButtonOnClick"
+                android:paddingStart="6dp"
+                android:paddingTop="3dp"
+                android:paddingEnd="6dp"
+                android:paddingBottom="3dp"
+                android:text="@string/newAccountButton"
+                android:textColor="@android:color/secondary_text_light"
+                android:textSize="12sp"
+                android:textStyle="bold"
+                app:cornerRadius="10dp" />
+
+        </RelativeLayout>
+
+        <View
+            android:id="@+id/yourVaultsBarDivider"
+            style="@style/Divider"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"></View>
+
+        <ScrollView
+            android:id="@+id/scrollView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:fillViewport="false">
+
+            <LinearLayout
+                android:id="@+id/scrollViewLinearLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:clipToPadding="true"
-                android:minHeight="60dp"
-                android:paddingTop="80dp"
-                android:paddingBottom="80dp"
-                app:cardBackgroundColor="@color/teal_700"
-                app:cardCornerRadius="20px"
-                app:cardElevation="20dp"
-                app:cardPreventCornerOverlap="true"
-                app:cardUseCompatPadding="false">
+                android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/currentAccountName"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingLeft="10px"
-                    android:paddingTop="10px"
-                    android:text="Current Account"
-                    android:textSize="16sp" />
+            </LinearLayout>
+        </ScrollView>
 
-                <TextView
-                    android:id="@+id/currentAccountNumber"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingLeft="10px"
-                    android:paddingTop="70px"
-                    android:text="00001111"
-                    android:textSize="16sp" />
-
-                <TextView
-                    android:id="@+id/currentAccountSortCode"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingLeft="10px"
-                    android:paddingTop="130px"
-                    android:paddingBottom="10px"
-                    android:text="00-11-22"
-                    android:textSize="16sp" />
-
-                <TextView
-                    android:id="@+id/currentAccountBalance"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingLeft="700px"
-                    android:paddingTop="70px"
-                    android:paddingEnd="10px"
-                    android:text="Balance"
-                    android:textSize="16sp" />
-            </androidx.cardview.widget.CardView>
-        </LinearLayout>
-    </ScrollView>
-
-    <TextView
-        android:id="@+id/greeting"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:background="@color/teal_700"
-        android:gravity="center"
-        android:textAlignment="center"
-        android:textSize="36sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    </LinearLayout>
 
     <com.google.android.material.bottomappbar.BottomAppBar
         android:id="@+id/homeBottomAppBar"
@@ -183,48 +267,6 @@
         app:layout_constraintStart_toEndOf="@+id/cardImageButton"
         app:layout_constraintTop_toTopOf="@+id/homeBottomAppBar"
         app:srcCompat="@drawable/icons8_automation_48" />
-
-    <FrameLayout
-        android:id="@+id/yourAccountBar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
-        android:background="#A18A8A"
-        app:layout_constraintBottom_toTopOf="@id/scrollView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/greeting"
-        app:layout_constraintVertical_bias="0.0">
-
-        <TextView
-            android:id="@+id/yourAccounts"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="start|center_vertical"
-            android:layout_marginStart="5dp"
-            android:text="@string/yourAccounts"
-            android:textSize="24sp"
-            android:textStyle="bold" />
-
-        <Button
-            android:id="@+id/newAccountButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical|end"
-            android:layout_marginEnd="5dp"
-            android:backgroundTint="@color/teal_200"
-            android:onClick="newAccountButtonOnClick"
-            android:paddingStart="6dp"
-            android:paddingTop="3dp"
-            android:paddingEnd="6dp"
-            android:paddingBottom="3dp"
-            android:text="@string/newAccountButton"
-            android:textColor="@android:color/secondary_text_light"
-            android:textSize="11sp"
-            android:textStyle="bold"
-            app:cornerRadius="10dp" />
-    </FrameLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
