--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -145,7 +145,7 @@
                 android:layout_centerVertical="true"
                 android:layout_marginEnd="10dp"
                 android:backgroundTint="@color/teal_200"
-                android:onClick="newAccountButtonOnClick"
+                android:onClick="newVaultButtonOnClick"
                 android:paddingStart="6dp"
                 android:paddingTop="3dp"
                 android:paddingEnd="6dp"
