--- a/app/src/main/res/layout/activity_card.xml
+++ b/app/src/main/res/layout/activity_card.xml
@@ -113,25 +113,16 @@
         app:layout_constraintTop_toBottomOf="@+id/cardDetails" />
 
     <Button
-        android:id="@+id/addToWallet"
-        android:layout_width="382dp"
-        android:layout_height="55dp"
-        android:layout_marginTop="12dp"
-        android:text="Add to Wallet"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/divider" />
-
-    <Button
         android:id="@+id/cardDetails"
         android:layout_width="382dp"
         android:layout_height="55dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="264dp"
         android:onClick="showCardDetailsOnClick"
         android:text="Show Card Details"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.454"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/addToWallet" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/changePIN"
@@ -162,6 +153,7 @@
         android:layout_marginTop="8dp"
         android:background="#FF6200EE"
         android:fontFamily="sans-serif-medium"
+        android:onClick="freezeCardOnClick"
         android:text="freezeCard"
         android:textColor="#FFFFFF"
         android:textOff="Freeze Card"
