--- a/app/src/main/res/layout/activity_pound.xml
+++ b/app/src/main/res/layout/activity_pound.xml
@@ -145,8 +145,10 @@
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="300dp"
                 android:text="@string/or_transfer_between_your_own_accounts"
+                android:textAlignment="center"
+                android:layout_gravity="center_horizontal"
+
                 android:textColor="#000000"
-                android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.498"
                 app:layout_constraintStart_toStartOf="parent"
