--- a/app/src/main/res/layout/activity_pound.xml
+++ b/app/src/main/res/layout/activity_pound.xml
@@ -32,16 +32,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/greeting"
     app:layout_constraintVertical_bias="1.0" />
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/add"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="68dp"
-        android:clickable="true"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@android:drawable/ic_input_add" />
 
     <ImageButton
         android:id="@+id/homeImageButton"
@@ -116,79 +106,30 @@
         app:srcCompat="@drawable/icons8_automation_48" />
 
 
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_width="316dp"
-        android:layout_height="19dp"
-        android:layout_marginTop="80dp"
-        android:text="Choose from your saved recipients or add another"
+
+
+    <Button
+        android:id="@+id/ownAccountButton"
+        android:layout_height="48dp"
+        android:text="Transfer Bewteen Own Accounts"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.528"
+        app:layout_constraintHorizontal_bias="0.494"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.379"
+        android:layout_width="326dp" />
+
+    <Button
+        android:id="@+id/otherAccountButton"
+        android:layout_width="326dp"
+        android:layout_height="48dp"
+        android:text="Transfer to others"
+        app:layout_constraintBottom_toBottomOf="@+id/poundImageButton"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="108dp">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/transferOwnAccount"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="300dp"
-                android:text="@string/or_transfer_between_your_own_accounts"
-                android:textAlignment="center"
-                android:layout_gravity="center_horizontal"
-
-                android:textColor="#000000"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.498"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-
-            <TextView
-                android:id="@+id/fromwhich"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:text="@string/from"
-                android:textAlignment="center"
-                android:layout_marginTop="20dp"/>
-
-            <Spinner
-                android:id="@+id/outgoing_spinner"
-                android:layout_width="149dp"
-                android:layout_height="44dp"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="20dp" />
-
-            <TextView
-                android:id="@+id/to"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/to"
-                android:textAlignment="center"
-                android:layout_marginTop="20dp"/>
-
-            <Spinner
-                android:id="@+id/incoming_spinner"
-                android:layout_width="149dp"
-                android:layout_height="44dp"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="20dp" />
-        </LinearLayout>
-
-
-    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
