--- a/app/src/main/res/layout/activity_vault_page.xml
+++ b/app/src/main/res/layout/activity_vault_page.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.accountPage.AccountPage">
+    tools:context=".VaultPage">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -165,6 +165,4 @@
         </ScrollView>
 
     </LinearLayout>
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
