--- a/app/src/main/res/layout/activity_account_page.xml
+++ b/app/src/main/res/layout/activity_account_page.xml
@@ -149,6 +149,7 @@
             android:layout_marginTop="5dp">
 
             <LinearLayout
+                android:id="@+id/accountTransactionsLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical" />
