--- a/app/src/main/res/layout/activity_vault_page.xml
+++ b/app/src/main/res/layout/activity_vault_page.xml
@@ -125,6 +125,7 @@
             android:layout_marginTop="5dp">
 
             <LinearLayout
+                android:id="@+id/vaultTransactionsList"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical" />
