--- a/app/src/main/res/layout/activity_transfer_between_own_accounts.xml
+++ b/app/src/main/res/layout/activity_transfer_between_own_accounts.xml
@@ -5,72 +5,99 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".TransferBetweenOwnAccounts">
-    <ScrollView
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:gravity="top"
+        android:orientation="vertical"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
         tools:layout_editor_absoluteX="0dp"
         tools:layout_editor_absoluteY="0dp">
 
-        <LinearLayout
+
+        <TextView
+            android:id="@+id/Transfer_between_your_own_accounts"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="20dp"
+            android:text="Transfer between your own accounts"
+            android:textAlignment="center"
+
+            android:textColor="#000000"
+            android:textSize="30sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.498"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+
+        <TextView
+            android:id="@+id/fromwhich"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="20dp"
+            android:text="@string/from"
+            android:textAlignment="center" />
 
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="2dp"
-                android:background="#c0c0c0" />
+        <Spinner
+            android:id="@+id/outgoing_spinner"
+            android:layout_width="200dp"
+            android:layout_height="44dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="20dp" />
 
-            <TextView
-                android:id="@+id/Transfer_between_your_own_accounts"
-                android:layout_width="wrap_content"
-                android:layout_height="18dp"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="150dp"
-                android:text="Transfer between your own accounts"
-                android:textAlignment="center"
+        <TextView
+            android:id="@+id/to"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:text="@string/to"
+            android:textAlignment="center" />
 
-                android:textColor="#000000"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.498"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+        <Spinner
+            android:id="@+id/incoming_spinner"
+            android:layout_width="200dp"
+            android:layout_height="44dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="20dp" />
 
-
-            <TextView
-                android:id="@+id/fromwhich"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="20dp"
-                android:text="@string/from"
-                android:textAlignment="center" />
-
-            <Spinner
-                android:id="@+id/outgoing_spinner"
-                android:layout_width="149dp"
-                android:layout_height="44dp"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="20dp" />
-
-            <TextView
-                android:id="@+id/to"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:text="@string/to"
-                android:textAlignment="center" />
-
-            <Spinner
-                android:id="@+id/incoming_spinner"
-                android:layout_width="149dp"
-                android:layout_height="44dp"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="20dp" />
-        </LinearLayout>
+        <EditText
+            android:id="@+id/amountToOwnAcc"
+            android:layout_width="100dp"
+            android:layout_height="56dp"
+            android:ems="10"
+            android:hint="amount"
+            android:inputType="number"
+            android:layout_gravity="center_horizontal"
+            android:textAlignment="center"
+            android:layout_marginTop="40dp"/>
 
 
-    </ScrollView>
+        <EditText
+            android:id="@+id/ref"
+            android:layout_width="100dp"
+            android:layout_height="56dp"
+            android:ems="10"
+            android:hint="reference"
+            android:layout_gravity="center_horizontal"
+            android:textAlignment="center"
+            android:layout_marginTop="40dp"/>
+
+
+
+        <Button
+            android:id="@+id/buttonSendOwnAccount"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Transfer"
+            android:layout_marginTop="40dp" />
+
+    </LinearLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
