--- a/app/src/main/res/layout/activity_transfer_between_own_accounts.xml
+++ b/app/src/main/res/layout/activity_transfer_between_own_accounts.xml
@@ -72,7 +72,7 @@
             android:layout_height="56dp"
             android:ems="10"
             android:hint="amount"
-            android:inputType="number"
+            android:inputType="numberDecimal"
             android:layout_gravity="center_horizontal"
             android:textAlignment="center"
             android:layout_marginTop="40dp"/>
