--- a/app/src/main/res/layout/activity_datetransfer.xml
+++ b/app/src/main/res/layout/activity_datetransfer.xml
@@ -32,8 +32,8 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="411dp"
+            android:layout_height="650dp"
             android:background="@android:color/holo_blue_light"
             android:padding="4dp"
             android:scrollbars="vertical" />
